other/deny-creation-of-resources/.chainsaw-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd1
spec:
  containers:
  - image: httpd
    name: httpd
