other/deny-creation-of-resources/.chainsaw-test/resource2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd2
spec:
  containers:
  - image: httpd
    name: httpd
