other/deny-creation-of-resources/deny-creation-of-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-creation-of-resources
  annotations:
    policies.kyverno.io/title: Deny Creation of Resources
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.11.1
    policies.kyverno.io/minversion: 1.9.0
    kyverno.io/kubernetes-version: "1.27"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy denies the creation and updating of resources specifically for Deployment 
      and Pod kinds during a specified time window. The policy is designed to enhance control 
      over resource modifications during critical periods, ensuring stability and consistency 
      within the Kubernetes environment.
spec:
  background: false
  rules:
  - match:
      resources:
        kinds:
          - Deployment
          - Pod
    name: deny-creation-of-resources
    preconditions:
      all:
      - key: '{{ time_now_utc().time_to_cron(@).split(@,'' '') | [1].to_number(@)
          }}'
        operator: AnyIn
        value: 9-10
    validate:
      deny:
        conditions:
        - key: '{{request.operation}}'
          operator: In
          value:
          - CREATE
          - UPDATE
      message: Creating and updating resources is not allowed at this time, please contact admin!
  validationFailureAction: Audit
